# telegram

./: .tester.json  CMakeLists.txt  README.md  TESTING_SCENARIOS.md  common.cmake
telegram/: bot.cpp  bot.h  client.cpp  client.h  exceptions.cpp  exceptions.h  fake.cpp  fake.h  fake_data.cpp  fake_data.h  fake_main.cpp  logger.cpp  logger.h  main.cpp  message_handler.cpp  message_handler.h  offset.txt
test/: test_client.cpp  test_scenarios.cpp
